[package]
name = "top_level"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    # session1 - basics
    "src/authentication",
    "src/console_input",
    "src/greet",
    "src/hello_world",
    "src/login",
    "src/login_manager",

    # session2 - concurrency
    "src/hello_thread",
    "src/hello_thread_params",
    "src/hello_thread_return",
    "src/divide_work",
    "src/thread_builder",
    "src/scoped_threads",
    "src/footgun",
    "src/atomics",
    "src/mutexes",
    "src/rwlocks",
    "src/deadlocks",
    "src/poisoning",
]
