[package]
name = "top_level"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    # session1 - basics
    "src/authentication",
    "src/console_input",
    "src/greet",
    "src/hello_world",
    "src/login",
    "src/login_manager",

    # session2 - concurrency
    "src/hello_thread",
    "src/hello_thread_params",
    "src/hello_thread_return",
    "src/divide_work",
    "src/thread_builder",
    "src/scoped_threads",
    "src/footgun",
    "src/atomics",
    "src/mutexes",
    "src/rwlocks",
    "src/deadlocks",
    "src/poisoning",
    "src/dashing",
    "src/parking",
    "src/channels1",
    "src/workers",
    "src/workers2",
    "src/affinity",
    "src/tpriority",
    "src/rayon_iters",
    "src/rayon_iters2",
    "src/rayon_scopes",
    "src/rayon_scopes2",

    # session3 - async
    "src/hello_async",
    "src/hello_tokio",
    "src/hello_tokio2",
    "src/hello_tokio3",
    "src/hello_tokio4",
    "src/hello_tokio5",
    "src/blocking",
    "src/blocking2",
    "src/blocking3",
    "src/tokio_testing",
    "src/errors",
    "src/errors2",
    "src/errors3",
    "src/errors4",
    "src/errors5",
    "src/fileio",
    "src/fileio2",
    "src/fileio3",
    "src/restclient",
    "src/tcp_echo",
    "src/tcp_echo_client",
    "src/sync_channel",
    "src/async_mutex",
    "src/tokio_select",
    "src/tokio_select2",
    "src/recursion",
    "src/broadcast",
    "src/logspan",
    "src/db",
    "src/web_service",
    "src/thumbnail_server",

    # session4 - memory management
    "src/memory"
]
