[package]
name = "collector"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = "z"
strip = true # Automatically strip symbols
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
shared_data = { version = "0.1.0", path = "../shared_data" }
sysinfo = { version = "0.36.1", features = ["apple-app-store"] }
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4", "fast-rng"] }
